--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,12 +28,12 @@
 				<div id="carouselExample" class="carousel slide">
 					<div class="carousel-inner" id="postImages">
 					</div>
-					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+					<button class="carousel-control-prev" type="button"
 						data-bs-slide="prev">
 						<span class="carousel-control-prev-icon"></span>
 						<span class="visually-hidden">Previous</span>
 					</button>
-					<button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+					<button class="carousel-control-next" type="button"
 						data-bs-slide="next">
 						<span class="carousel-control-next-icon"></span>
 						<span class="visually-hidden">Next</span>
