--- a/templates/profile.html
+++ b/templates/profile.html
@@ -79,11 +79,12 @@
                     <img src="{{url_for('static', filename='images/file.jpg')}}" class="d-block object-fit-fill"
                         style="border-radius: 50%; width: 15%; margin-right: 1em;">
                     &nbsp;
-                    <div clas="d-flex flex-column">
+                    <div>
                         <h2>{{ profile['user'].username }}</h2>
                         <p>{{ profile['user'].email }}</p>
                         <p>{{ profile['user'].phone }}</p>
                     </div>
+                    <button type="button" class="btn btn-primary h-25 mx-3 my-1">Editar Perfil</button>
                 </div>
                 <hr>
                 <div class="d-flex justify-content-center">
@@ -112,12 +113,13 @@
             <div class="container py-4">
                 <div class="d-flex">
                     <img src="{{url_for('static', filename='images/file.jpg')}}" class="d-block object-fit-fill"
-                        style="border-radius: 50%; width: 32%; margin-right: 1em;">
+                        style="border-radius: 50%; width: 25vw; height: 12vh; margin-right: 1em;">
                     &nbsp;
-                    <div clas="d-flex flex-column">
+                    <div>
                         <h2>{{ profile['user'].username }}</h2>
                         <p>{{ profile['user'].email }}</p>
                         <p>{{ profile['user'].phone }}</p>
+                        <button type="button" class="btn btn-primary" style="height: 5vh; width: 100%;">Editar Perfil</button>
                     </div>
                 </div>
                 <hr>
