--- a/templates/profile.html
+++ b/templates/profile.html
@@ -59,33 +59,29 @@
                 </div>
                 <div class="modal-body">
                     <form method="POST" action="" enctype="multipart/form-data">
-						{{ form.hidden_tag() }}
-						<div class="mb-3">
-							<label class="form-label">Nome de Usuário</label>
-							{{ form.username(class="form-control", id="formUsername") }}
-						</div>
-						<div class="mb-3">
-							<label class="form-label">Email</label>
-							{{ form.email(class="form-control", id="formEmail") }}
-						</div>
-						<div class="mb-3">
-							<label class="form-label">Telefone</label>
-							{{ form.phone(class="form-control", id="formPhone") }}
-						</div>
-						<div class="mb-3">
-							<label class="form-label">Senha</label>
-							{{ form.password(class="form-control", id="formPassword") }}
-						</div>
-						<div class="mb-3">
-							<label class="form-label">Foto de Perfil</label>
-							{{ form.images(class="form-control", id="formProfilePic") }}
-						</div>
+                        {{ form.hidden_tag() }}
+                        <div class="mb-3">
+                            <label class="form-label">Nome de Usuário</label>
+                            {{ form.username(class="form-control", id="form_username") }}
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Email</label>
+                            {{ form.email(class="form-control", id="form_email") }}
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Telefone</label>
+                            {{ form.phone(class="form-control", id="form_phone") }}
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Foto de Perfil</label>
+                            {{ form.image(class="form-control", id="form_profile_pic") }}
+                        </div>
 
-						<div class="d-flex flex-row w-100">
-							{{ form.submit(class="btn btn-primary mx-1") }}
-							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-						</div>
-					</form>
+                        <div class="d-flex flex-row w-100">
+                            {{ form.submit(class="btn btn-primary mx-1") }}
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
