Now you can edit profiles

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -233,7 +233,8 @@
 						class="bi bi-house-fill px-2 fs-3"></i>Home</a>
 				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5" data-bs-toggle="modal"
 					data-bs-target="#postModal"><i class="bi bi-plus-square px-2 fs-4"></i>Criar</a>
-				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5" href="{{ url_for('profile', id=session['user'].id) }}"><i
+				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5"
+					href="{{ url_for('profile', id=session['user'].id) }}"><i
 						class="bi bi-person-circle px-2 fs-4"></i>Perfil</a>
 				<a type="button" class="btn btn-dark m-1 align-items-center d-flex fs-5" data-bs-toggle="modal"
 					data-bs-target="#filterModal"><i class="bi bi-funnel px-2 fs-4"></i>Filtrar</a>
@@ -278,7 +279,8 @@
 						class="bi bi-house-fill px-2 fs-1"></i></a>
 				<a type="button" class="btn btn-dark align-items-center d-flex" data-bs-toggle="modal"
 					data-bs-target="#postModal"><i class="bi bi-plus-square px-2 fs-1"></i></a>
-				<a type="button" class="btn btn-dark align-items-center d-flex" href="{{ url_for('profile', id=session['user'].id) }}"><i
+				<a type="button" class="btn btn-dark align-items-center d-flex"
+					href="{{ url_for('profile', id=session['user'].id) }}"><i
 						class="bi bi-person-circle px-2 fs-1"></i></a>
 			</ul>
 		</nav>
