--- a/templates/profile.html
+++ b/templates/profile.html
@@ -114,8 +114,8 @@
         <div class="flex-fill overflow-auto vh-100">
             <div class="container py-4 col-lg-8">
                 <div class="d-flex">
-                    <img src="{{url_for('static', filename='images/file.jpg')}}" class="d-block object-fit-fill"
-                        style="border-radius: 50%; width: 15%; margin-right: 1em;">
+                    <img src="{{ url_for('get_file', subpath='profile_pictures', filename=profile['user'].id) }}"
+                        class="d-block object-fit-fill" style="border-radius: 50%; width: 15%; height: 8em; margin-right: 1em;">
                     &nbsp;
                     <div>
                         <h2>{{ profile['user'].username }}</h2>
@@ -152,7 +152,7 @@
         <div class="flex-fill overflow-auto vh-100">
             <div class="container py-4">
                 <div class="d-flex">
-                    <img src="{{url_for('static', filename='images/file.jpg')}}" class="d-block object-fit-fill"
+                    <img src="{{url_for('static', filename='images/user_default.png')}}" class="d-block object-fit-fill"
                         style="border-radius: 50%; width: 25vw; height: 12vh; margin-right: 1em;">
                     &nbsp;
                     <div>
