--- a/templates/login.html
+++ b/templates/login.html
@@ -19,16 +19,16 @@
 			<img class="mb-4 w-100" src="{{ url_for('static', filename='images/logo.svg') }}" alt="">
 
 			<form method="POST" action="">
-				{{ form.hidden_tag() }}
-				{{ form.email(class="form-control", placeholder="Email") }}
-				{{ form.password(class="form-control", placeholder="Senha") }}
+				{{ loginForm.hidden_tag() }}
+				{{ loginForm.email(class="form-control", placeholder="Email") }}
+				{{ loginForm.password(class="form-control", placeholder="Senha") }}
 				<br>
-				{{ form.submit(class="btn btn-primary") }}
+				{{ loginForm.submit(class="btn btn-primary") }}
 
-				{% for error in form.email.errors %}
+				{% for error in loginForm.email.errors %}
 				<p class="text-primary">{{ error }}</p>
 				{% endfor %}
-				{% for error in form.password.errors %}
+				{% for error in loginForm.password.errors %}
 				<p class="text-primary">{{ error }}</p>
 				{% endfor %}
 			</form>
