--- a/templates/register.html
+++ b/templates/register.html
@@ -19,19 +19,19 @@
 			<img class="mb-4 w-100" src="{{ url_for('static', filename='images/logo.svg') }}" alt="">
 
 			<form method="POST" action="">
-				{{ form.hidden_tag() }}
-				{{ form.username(class="form-control", placeholder="Nome Completo") }}
+				{{ registerForm.hidden_tag() }}
+				{{ registerForm.username(class="form-control", placeholder="Nome Completo") }}
 				<br>
-				{{ form.email(class="form-control", placeholder="Email") }}
-				{{ form.phone(class="form-control", placeholder="Telefone") }}
-				{{ form.password(class="form-control", placeholder="Senha") }}
+				{{ registerForm.email(class="form-control", placeholder="Email") }}
+				{{ registerForm.phone(class="form-control", placeholder="Telefone") }}
+				{{ registerForm.password(class="form-control", placeholder="Senha") }}
 				<br>
-				{{ form.submit(class="btn btn-primary") }}
+				{{ registerForm.submit(class="btn btn-primary") }}
 
-				{% for error in form.email.errors %}
+				{% for error in registerForm.email.errors %}
 				<p class="text-primary">{{ error }}</p>
 				{% endfor %}
-				{% for error in form.phone.errors %}
+				{% for error in registerForm.phone.errors %}
 				<p class="text-primary">{{ error }}</p>
 				{% endfor %}
 			</form>
